--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,8 +37,10 @@
             </div>
         </header>
 
-        <div class="mx-auto col-sm-12 main-section" id="myTab" role="tablist">
-            <ul class="nav nav-tabs justify-content-end">
+
+
+        <div class="mx-auto col-12 main-section" id="myTab" role="tablist">
+            <ul class="nav nav-tabs">
                 <li class="nav-item">
                     <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab"
                         aria-controls="list" aria-selected="false">Fundações Cadastradas</a>
@@ -51,6 +53,16 @@
 
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
+
+                    <div class="input-group mb-3 justify-content-end" id="search-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <i class="material-icons" title="Search">&#xe8b6;</i>
+                            </span>
+                        </div>
+                        <input type="text" id="search-input" class="form-control col-sm-6"
+                            placeholder="Pesquisar por CNPJ">
+                    </div>
 
                     <div class="title">
                         <h3 class="text-center">Detalhes das Fundações Cadastradas</h3>
@@ -76,29 +88,7 @@
                         </div>
                     </div>
 
-                    <div class="justify-content-end pagination ">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
                 </div>
-
 
 
 
@@ -160,7 +150,7 @@
 
         </div>
 
-        <footer></footer>
+
 
     </div>
     <script src="main.js"></script>
