--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,14 +30,12 @@
 <body>
     <div class="container">
         <header>
-            <div class="card">
+            <div class="card text-white bg-primary mb-3">
                 <div class="card-body text-center">
                     <h1>Sistema de Cadastros de Fundações de Apoio.</h1>
                 </div>
             </div>
         </header>
-
-
 
         <div class="mx-auto col-12 main-section" id="myTab" role="tablist">
             <ul class="nav nav-tabs">
@@ -47,7 +45,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="form-tab" data-toggle="tab" href="#form" role="tab" aria-controls="form"
-                        aria-selected="true">Formulário</a>
+                        aria-selected="true">Nova Fundação</a>
                 </li>
             </ul>
 
